# whispered-secrets

./: .pre-commit-config.yaml  .secrets.baseline  .venv  LICENSE  README.md  pyproject.toml  requirements.txt  summary.txt  transcription_output.txt
.github/workflows/: codeql-analysis.yml  constraints.txt  main.yaml
demo/: __init__.py  app.py  app_1.py  app_2.py  app_3.py  app_4.py  app_5.py  streamlit_tutorial.py  summarize.py  transcribe.py
docs/: project_specific_setup.md  using_poetry.md
notebooks/: 1 - Transcription.ipynb  2 - Ollama.ipynb
tests/: test_whispered_secrets.py
